fixed some tests and removed uv coords